include/El/lapack_like/solve.h

/* TODO: Sparse equivalents */

/* General Linear Model
   ==================== */
/* Solve min_{X,Y} || Y ||_F subject to D = A X + B Y */

EL_EXPORT ElError ElGLM_s
( ElMatrix_s A, ElMatrix_s B, ElMatrix_s D, ElMatrix_s Y );
EL_EXPORT ElError ElGLM_d
( ElMatrix_d A, ElMatrix_d B, ElMatrix_d D, ElMatrix_d Y );
EL_EXPORT ElError ElGLM_c
( ElMatrix_c A, ElMatrix_c B, ElMatrix_c D, ElMatrix_c Y );
EL_EXPORT ElError ElGLM_z
( ElMatrix_z A, ElMatrix_z B, ElMatrix_z D, ElMatrix_z Y );
EL_EXPORT ElError ElGLMDist_s
( ElDistMatrix_s A, ElDistMatrix_s B, ElDistMatrix_s D, ElDistMatrix_s Y );
EL_EXPORT ElError ElGLMDist_d
( ElDistMatrix_d A, ElDistMatrix_d B, ElDistMatrix_d D, ElDistMatrix_d Y );
EL_EXPORT ElError ElGLMDist_c
( ElDistMatrix_c A, ElDistMatrix_c B, ElDistMatrix_c D, ElDistMatrix_c Y );
EL_EXPORT ElError ElGLMDist_z
( ElDistMatrix_z A, ElDistMatrix_z B, ElDistMatrix_z D, ElDistMatrix_z Y );
/* Hermitian solve
   =============== */
EL_EXPORT ElError ElHermitianSolve_c
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElHermitianSolve_z
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElHermitianSolveDist_c
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElHermitianSolveDist_z
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_z A, ElDistMatrix_z B );
/* TODO: Expert version for choosing pivot strategy */

EL_EXPORT ElError ElHermitianSolveDistSparse_c
( ElConstDistSparseMatrix_c A, ElDistMultiVec_c X );
EL_EXPORT ElError ElHermitianSolveDistSparse_z
( ElConstDistSparseMatrix_z A, ElDistMultiVec_z X );
/* HPD solve
   ========= */
EL_EXPORT ElError ElHPDSolve_s
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElHPDSolve_d
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElHPDSolve_c
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElHPDSolve_z
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElHPDSolveDist_s
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElHPDSolveDist_d
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElHPDSolveDist_c
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElHPDSolveDist_z
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_z A, ElDistMatrix_z B );
/* Least squares
   ============= */
/* Solves min_X || A X - B ||_F */

EL_EXPORT ElError ElLeastSquares_s
( ElOrientation orientation, ElMatrix_s A, ElConstMatrix_s B, ElMatrix_s X );
EL_EXPORT ElError ElLeastSquares_d
( ElOrientation orientation, ElMatrix_d A, ElConstMatrix_d B, ElMatrix_d X );
EL_EXPORT ElError ElLeastSquares_c
( ElOrientation orientation, ElMatrix_c A, ElConstMatrix_c B, ElMatrix_c X );
EL_EXPORT ElError ElLeastSquares_z
( ElOrientation orientation, ElMatrix_z A, ElConstMatrix_z B, ElMatrix_z X );
EL_EXPORT ElError ElLeastSquaresDist_s
( ElOrientation orientation, 
  ElDistMatrix_s A, ElConstDistMatrix_s B, ElDistMatrix_s X );
EL_EXPORT ElError ElLeastSquaresDist_d
( ElOrientation orientation, 
  ElDistMatrix_d A, ElConstDistMatrix_d B, ElDistMatrix_d X );
EL_EXPORT ElError ElLeastSquaresDist_c
( ElOrientation orientation, 
  ElDistMatrix_c A, ElConstDistMatrix_c B, ElDistMatrix_c X );
EL_EXPORT ElError ElLeastSquaresDist_z
( ElOrientation orientation, 
  ElDistMatrix_z A, ElConstDistMatrix_z B, ElDistMatrix_z X );
EL_EXPORT ElError ElLeastSquaresDistSparse_s
( ElOrientation orientation,
  ElConstDistSparseMatrix_s A, ElConstDistMultiVec_s Y, ElDistMultiVec_s X );
EL_EXPORT ElError ElLeastSquaresDistSparse_d
( ElOrientation orientation,
  ElConstDistSparseMatrix_d A, ElConstDistMultiVec_d Y, ElDistMultiVec_d X );
EL_EXPORT ElError ElLeastSquaresDistSparse_c
( ElOrientation orientation,
  ElConstDistSparseMatrix_c A, ElConstDistMultiVec_c Y, ElDistMultiVec_c X );
EL_EXPORT ElError ElLeastSquaresDistSparse_z
( ElOrientation orientation,
  ElConstDistSparseMatrix_z A, ElConstDistMultiVec_z Y, ElDistMultiVec_z X );
/* Symmetric solve
   =============== */
EL_EXPORT ElError ElSymmetricSolve_s
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElSymmetricSolve_d
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElSymmetricSolve_c
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElSymmetricSolve_z
( ElUpperOrLower uplo, ElOrientation orientation, ElMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElSymmetricSolveDist_s
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElSymmetricSolveDist_d
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElSymmetricSolveDist_c
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElSymmetricSolveDist_z
( ElUpperOrLower uplo, ElOrientation orientation, 
  ElDistMatrix_z A, ElDistMatrix_z B );
/* TODO: Expert version for choosing pivot strategy */

EL_EXPORT ElError ElSymmetricSolveDistSparse_s
( ElConstDistSparseMatrix_s A, ElDistMultiVec_s X );
EL_EXPORT ElError ElSymmetricSolveDistSparse_d
( ElConstDistSparseMatrix_d A, ElDistMultiVec_d X );
EL_EXPORT ElError ElSymmetricSolveDistSparse_c
( ElConstDistSparseMatrix_c A, ElDistMultiVec_c X );
EL_EXPORT ElError ElSymmetricSolveDistSparse_z
( ElConstDistSparseMatrix_z A, ElDistMultiVec_z X );